Fixed readibility by adding letter spacing.

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  letter-spacing: 1.5px;
 }
 
 @media only screen and (max-width: 1024px) {
